--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,14 @@
 # - In PHP Versions <= 7.4 MySQL8 is not supported due to lacking pdo support
 
 # Possible values: php54, php56, php71, php72, php73, php74
-PHPVERSION=php74
+PHPVERSION=php72
 DOCUMENT_ROOT=./www
 VHOSTS_DIR=./config/vhosts
 APACHE_LOG_DIR=./logs/apache2
 PHP_INI=./config/php/php.ini
 
 # Possible values: mariadb, mysql, mysql8
-DATABASE=mysql
+DATABASE=mariadb
 MYSQL_DATA_DIR=./data/mysql
 MYSQL_LOG_DIR=./logs/mysql
 
@@ -24,9 +24,9 @@ HOST_MACHINE_MYSQL_PORT=3306
 HOST_MACHINE_REDIS_PORT=6379
 
 # MySQL root user password
-MYSQL_ROOT_PASSWORD=tiger
+MYSQL_ROOT_PASSWORD=root
 
 # Database settings: Username, password and database name
-MYSQL_USER=docker
-MYSQL_PASSWORD=docker
-MYSQL_DATABASE=docker
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=db_monitor
