--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,63 +2,73 @@ version: "3"
 
 # NETWORK
 networks:
-  my-network:
-    driver: bridge
+	my-network:
+		driver: bridge
 
 services:
-  webserver:
-    build: 
-      context: ./bin/${PHPVERSION}
-    container_name: ${PHPVERSION}
-    restart: 'always'
-    ports:
-      - "${HOST_MACHINE_UNSECURE_HOST_PORT}:80"
-      - "${HOST_MACHINE_SECURE_HOST_PORT}:443"
-    links: 
-      - database
-    volumes:
-      - ${DOCUMENT_ROOT-./www}:/var/www/html
-      - ${PHP_INI-./config/php/php.ini}:/usr/local/etc/php/php.ini
-      - ${VHOSTS_DIR-./config/vhosts}:/etc/apache2/sites-enabled
-      - ${LOG_DIR-./logs/apache2}:/var/log/apache2
+	webserver:
+		build: 
+			context: ./bin/${PHPVERSION}
+		container_name: ${PHPVERSION}
+		restart: 'always'
+		ports:
+			- "${HOST_MACHINE_UNSECURE_HOST_PORT}:80"
+			- "${HOST_MACHINE_SECURE_HOST_PORT}:443"
+		links: 
+			- database
+		volumes:
+			- ${DOCUMENT_ROOT-./www}:/var/www/html
+			- ${PHP_INI-./config/php/php.ini}:/usr/local/etc/php/php.ini
+			- ${VHOSTS_DIR-./config/vhosts}:/etc/apache2/sites-enabled
+			- ${LOG_DIR-./logs/apache2}:/var/log/apache2
 
-  database:
-    build:
-      context: "./bin/${DATABASE}"
-    container_name: 'database'
-    restart: 'always'
-    ports:
-      - "127.0.0.1:${HOST_MACHINE_MYSQL_PORT}:3306"
-    volumes: 
-      - ${MYSQL_DATA_DIR-./data/mysql}:/var/lib/mysql
-      - ${MYSQL_LOG_DIR-./logs/mysql}:/var/log/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+	database:
+		build:
+			context: "./bin/${DATABASE}"
+		container_name: 'database'
+		restart: 'always'
+		ports:
+			- "127.0.0.1:${HOST_MACHINE_MYSQL_PORT}:3306"
+		volumes: 
+			- ${MYSQL_DATA_DIR-./data/mysql}:/var/lib/mysql
+			- ${MYSQL_LOG_DIR-./logs/mysql}:/var/log/mysql
+		environment:
+			MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+			MYSQL_DATABASE: ${MYSQL_DATABASE}
+			MYSQL_USER: ${MYSQL_USER}
+			MYSQL_PASSWORD: ${MYSQL_PASSWORD}
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: 'phpmyadmin'
-    links:
-      - database
-    environment:
-      PMA_HOST: database
-      PMA_PORT: 3306
-      PMA_USER: ${MYSQL_USER}
-      PMA_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-    ports:
-      - '8080:80'
-    volumes: 
-      - /sessions
-      - ${PHP_INI-./config/php/php.ini}:/usr/local/etc/php/conf.d/php-phpmyadmin.ini
-
-  redis:
-    container_name: 'redis'
-    image: redis:latest
-    ports:
-      - "127.0.0.1:${HOST_MACHINE_REDIS_PORT}:6379"
+	phpmyadmin:
+		image: phpmyadmin/phpmyadmin
+		container_name: 'phpmyadmin'
+		links:
+			- database
+		environment:
+			PMA_HOST: database
+			PMA_PORT: 3306
+			PMA_USER: ${MYSQL_USER}
+			PMA_PASSWORD: ${MYSQL_PASSWORD}
+			MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+			MYSQL_USER: ${MYSQL_USER}
+			MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+		ports:
+			- '8080:80'
+		volumes: 
+			- /sessions
+			- ${PHP_INI-./config/php/php.ini}:/usr/local/etc/php/conf.d/php-phpmyadmin.ini
+#  elk:
+#    image: willdurand/elk
+#    volumes:
+#      - ./elk/logstash:/etc/logstash
+#      - ./elk/logstash/patterns:/opt/logstash/patterns
+#    volumes_from:
+#      - application
+#      - php
+#      - nginx
+#    ports:
+#      - 81:80
+	redis:
+		container_name: 'redis'
+		image: redis:latest
+		ports:
+			- "127.0.0.1:${HOST_MACHINE_REDIS_PORT}:6379"
